[tool.poetry]
name = "pbgit"
version = "0.1.0"
description = ""
authors = ["Henry Jobst <github@jobst-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
click = "^8.1.3"
GitPython = "^3.1.31"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
